--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -77,6 +77,22 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="12dp"
                         >
+                        <TextView
+                            android:id="@+id/tvSiteNext"
+                            android:background="@drawable/bg_large_round_gray"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:ellipsize="end"
+                            android:maxLines="1"
+                            android:singleLine="true"
+                            tools:text="换源"
+                            android:text="Next"
+                            android:textColor="@color/text_foreground"
+                            android:drawableRight="@drawable/ic_change_20"
+                            android:drawablePadding="4dp"
+                            android:paddingHorizontal="12dp"
+                            android:paddingVertical="6dp"
+                         />
 
                             <TextView
                                 android:id="@+id/tvSite"
@@ -253,17 +269,15 @@
                         />
                 </RelativeLayout>
                 <!--        线路列表-->
-                <com.owen.tvrecyclerview.widget.TvRecyclerView
+                <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/mGridViewFlag"
                     android:layout_width="match_parent"
-                    android:layout_height="30dp"
+                    android:layout_height="wrap_content"
                     android:layout_marginHorizontal="10dp"
                     android:layout_marginVertical="4dp"
-                    android:clipChildren="false"
-                    android:clipToPadding="false"
-                    app:tv_horizontalSpacingWithMargins="@dimen/dp_10"
-                    app:tv_selectedItemIsCentered="true"
-                    tools:listitem="@layout/item_select_flag" />
+                    tools:listitem="@layout/item_select_flag"
+                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                    android:orientation="horizontal"/>
 
                 <LinearLayout
                     android:layout_width="match_parent"
