--- a/app/src/main/res/layout/player_vod_control_view.xml
+++ b/app/src/main/res/layout/player_vod_control_view.xml
@@ -491,6 +491,22 @@
                     android:text="重置"
                     />
 
+                <!--换线-->
+                <TextView
+                    android:id="@+id/switch_source"
+                    android:singleLine="true"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="@dimen/dp_5"
+                    android:layout_marginRight="@dimen/dp_5"
+                    android:textColor="@color/white"
+                    android:focusable="true"
+                    android:paddingHorizontal="10dp"
+                    android:paddingVertical="4dp"
+                    android:text="换线"
+                    android:visibility="gone"
+                    />
+
                 <TextView
                     android:id="@+id/zimu_select"
                     android:singleLine="true"
